Review #5317  Implement RT aggregation v2